[package]
name = "xcopyfgc"
version = "0.1.0"
authors = ["TKGgunter <thothgunter@live.com>"]
edition = "2018"


[dependencies]
rand = "0.8.0"
rand_distr = "*"


[dependencies.miniz]
path = "miniz/"

[dependencies.stb_tt-sys]
path = "stb_tt-sys/"

[dependencies.stb_image-sys]
path = "stb_image-sys/"

[target.'cfg(target_os="linux")'.dependencies]
x11 = {version="2.18.2", features=["xlib"]}

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.19.1"
objc = "0.2.3"

[target.'cfg(windows)'.dependencies.winapi]
path = "winapi-0.3.8"
version = "0.3.8"
features = ["winuser", "windef", "wingdi", "winnt", "libloaderapi", "memoryapi", "processenv",
            "mmdeviceapi", "combaseapi", "audioclient", "dsound", "impl-default", "errhandlingapi", "hidpi"] 


