[package]
name = "circuitsim"
version = "0.1.0"
authors = ["TKGgunter <thothgunter@live.com>"]
edition = "2018"
description = "A Sleepy Ibis LLC production."
build= "build.rs"



[package.metadata.winres]
LegalCopyright = "Copyright © ???"



[dependencies]
rand = "0.8.0"
rand_distr = "*"


[dependencies.miniz]
path = "miniz/"

[dependencies.stb_tt-sys]
path = "stb_tt-sys/"

[dependencies.stb_image-sys]
path = "stb_image-sys/"

[target.'cfg(target_os="linux")'.dependencies]
x11 = {version="2.18.2", features=["xlib"]}

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.19.1"
objc = "0.2.3"
core-foundation = "0.9.1"
core-graphics = "0.13.0"


[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.11"
winapi = {path="winapi-0.3.8"}


[target.'cfg(windows)'.dependencies.winapi]
path = "winapi-0.3.8"
version = "0.3.8"
features = ["winuser", "windef", "wingdi", "winnt", "libloaderapi", "memoryapi", "processenv", "wincon",
            "mmdeviceapi", "combaseapi", "audioclient", "dsound", "impl-default", "errhandlingapi", "hidpi"] 


